--- a/FAIJ/FAIJ.html
+++ b/FAIJ/FAIJ.html
@@ -2,21 +2,49 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>The Further Adventures of Indiana Jones</title>
 </head>
 
 <body>
-<h2>The Further Adventures of Indiana Jones</h2>
 <img src="FAIJ01.jpg"> <br>
-Series: 34 issues 1983<br>
-Publisher: Marvel <br>
-Cover art by Terry Austin<br> 
-Script by John Byrne<br>
-Illustrations by John Byrne and Terry Austin<br>
+34 issues 1983-1986 by Marvel<br>
 <p>
-The Further Adventures of Indiana Jones<br>
-Indiana Jones goes after the Ikons of Ikammanen, "statues" of solid gold, after Charlie Dunne is murdered in the attempt. Indiana encounters Edith, Charlie's sister, and Solomon Black, who are both after the Ikons. Edith and Indiana are captured by a cult worshipping the Ikons.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="FAIJ01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FAIJ20.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+The Further Adventures of Indiana Jones #1: Indiana Jones goes after the Ikons of Ikammanen, "statues" of solid gold, after Charlie Dunne is murdered in the attempt. Indiana encounters Edith, Charlie's sister, and Solomon Black, who are both after the Ikons. Edith and Indiana are captured by a cult worshipping the Ikons.
 </p>
 </body>
 </html>
