--- a/IJRLA/IJRLA.html
+++ b/IJRLA/IJRLA.html
@@ -2,18 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>Raiders of the Lost Ark</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>Indiana Jones and the Raiders of the Lost Ark</title>
 </head>
 
 <body>
-Indiana Jones and the Raiders of the Lost Ark<br>
 <img src="IJRLA.jpg"> <br>
-Series: Movie, Comic Adaptation<br>
-Publisher: Lucas Films, Paramount, Marvel<br>
+1981 Movie, by Lucas Films and Paramount, Comic by Marvel<br>
 Written by George Lucas<br>
 Directed by Steven Spielberg<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="IJRLA1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IJRLA2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IJRLA3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Indiana Jones and the Raiders of the Lost Ark is a 1981 American action adventure film directed by Steven Spielberg, with a screenplay written by Lawrence Kasdan, from a story by George Lucas and Philip Kaufman. It was produced by Frank Marshall for Lucasfilm Ltd., with Lucas and Howard Kazanjian as executive producers. 
 </p><p>
 Starring Harrison Ford, it was the first installment in the Indiana Jones film franchise to be released, though it is the second in internal chronological order. It pits Indiana Jones against a group of Nazis who are searching for the Ark of the Covenant, which Adolf Hitler believes will make his army invincible. 
@@ -28,17 +43,16 @@ The film's critical and popular success led to three additional films, Indiana J
 </p><p>
 Considered one of the greatest films ever made, the film also ranked #7 on Empire's list of the 100 greatest movies of all time. In 1999, the film was included in the U.S. Library of Congress' National Film Registry as having been deemed "culturally, historically, or aesthetically significant."
 </p><p>
-<img src="IJRLA1.jpg"><br>
 Script by Walt Simonson<br>
 Illustrations by John Buscema, Klaus Janson
 </p><p> 
 Marvel Comics' official comic adaptation of the 1981 movie "Raiders of the Lost Ark." In this issue, Indiana Jones' attempt to obtain a rare idol is foiled by his rival Belloq. And then Indy is contacted by the government to find the Ark of the Covenant before the Nazis do in part one of this adaptation.
 </p><p> 
-<img src="IJRLA2.jpg"><br>
 Now reunited with Marion Ravenwood, Indy and his former girl friend set off for Cairo, Egypt to search for the Ark. But Belloq and the Nazis are there and Indy has to deal with them and figure out where the Ark is in part two of this adaptation. 
 </p><p> 
-<img src="IJRLA3.jpg"><br>
 After escaping from the Well of Souls room, Indy and company have to get the Ark of the Covenant back from the Nazis. But that may be nothing compared to the secret and power of the Ark in the conclusion of this adaptation. 
+</p><p>
+See also <a href="../FAIJ/FAIJ.html">Further Adventures of Indiana Jones</a> comic book series.
 </p>
 </body>
 </html>
