--- a/RIPD/RIPD.html
+++ b/RIPD/RIPD.html
@@ -2,15 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>RIPD </title>
 </head>
 
 <body>
-<img src="RIPD1.jpg"> <img src="RIPD2003.jpg"> <img src="RIPD2012.jpg"> <img src="RIPDMovie.jpg"><br>
-Series:  4 issues 1999 - 2000, TPB 2003, 4 issues 2012 - 2013<br>
-Publisher: Dark Horse, Universal Pictures<br>
+<img src="RIPD1.jpg"><br>
+4 issues 1999-2000, TPB 2003, 4 issues 2012-2013, Dark Horse, Universal Pictures<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="RIPD1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RIPD2003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RIPD2012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RIPDMovie.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Welcome to the Rest In Peace Department--the devoted, yet dead, officers of divine law enforcement "patrolling the deadbeat. . . reporting to one boss." Yep--THAT boss. Nick Cruz died an untimely death, at the height of his personal and professional life. Why did he join the R.I.P.D.? Well, not knowing the identity of his killer has left his soul a bit. . . restless. Now he hunts some of the most fiendish creatures, hoping for the chance to find out who set him up so he can get into heaven.
 </p><p>
 Roy Pulsipher and Nick Walker are dead, but that doesn’t mean their time in law enforcement is over. Both Roy and Nick are officers in the Rest in Peace Department, sworn to serve the Almighty and protect the living from evil’s foul corruption. Their current case has them chasing a ghostly fanatic determined to undo all of creation—a threat with very personal connections to Roy’s past, stretching back a hundred years into a weird, Wild West and Roy’s first day on the job. It’s a twisted history that Nick is only starting to uncover, and one that could have him reconsidering ever joining the R.I.P.D.!
