--- a/PrinceNamor/PrinceNamor.html
+++ b/PrinceNamor/PrinceNamor.html
@@ -9,28 +9,37 @@
 
 <body>
 <img src="PrinceNamor1.jpg" title="Prince Namor, Sub-Mariner"> <br>
-Series: 4 issue mini series 1984<br>
+4 issues 1984 Marvel<br>
 Written by J.M. DeMatteis and Bob Budiansky<br>
 Illustrated by Bob Budiansky and Danny Bulanadi<br>
-Publisher: Marvel<br>
 <p>
-Issue #1: "A New Age Dawning?!"<br>
-His mother was an Atlantean Princess and his father was an American surface dweller. He is the worlds first mutant. He is the Avenging Son. He is the Savage Sub-Mariner. Prince Namor ventures to the surface worlds greatest city, New York, where in the halls of the United Nations building he seeks to establish peace once and for between his kingdom and theirs. But it is on his return home when he is attacked by an undersea assassin and her leviathan that Namor makes the most startling discovery of all...Atlantis has fallen! 
+
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="PrinceNamor1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PrinceNamor2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PrinceNamor3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PrinceNamor4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
-<img src="PrinceNamor2.jpg">
+Issue #1: "A New Age Dawning?!" His mother was an Atlantean Princess and his father was an American surface dweller. He is the worlds first mutant. He is the Avenging Son. He is the Savage Sub-Mariner. Prince Namor ventures to the surface worlds greatest city, New York, where in the halls of the United Nations building he seeks to establish peace once and for between his kingdom and theirs. But it is on his return home when he is attacked by an undersea assassin and her leviathan that Namor makes the most startling discovery of all...Atlantis has fallen! 
 </p><p>
-Issue #2: The Once and Future Man!" <br>
-The undersea Kingdom of Atlantis lies in ruins. Now Prince Namor is torn between his duties to his people and the tittering peace he hopes to make with the surface world.
+Issue #2: The Once and Future Man!" The undersea Kingdom of Atlantis lies in ruins. Now Prince Namor is torn between his duties to his people and the tittering peace he hopes to make with the surface world.
 </p><p>
-<img src="PrinceNamor3.jpg">
+Issue #3: "The Twain Shall Meet!" When Prince Namor discovers that Jacqueline has been kidnapped, he immediately heads to her rescue. But dark and powerful forces conspire against him. If the Sub-mariner fails, the peace he has worked so hard to build between Atlantis and the surface world could be destroyed. Featuring cameos by the Fantastic Four, Doctor Strange, the Defenders, Peter Parker (Spider-Man), and Doctor Doom.
 </p><p>
-Issue #3: "The Twain Shall Meet!" <br>
-When Prince Namor discovers that Jacqueline has been kidnapped, he immediately heads to her rescue. But dark and powerful forces conspire against him. If the Sub-mariner fails, the peace he has worked so hard to build between Atlantis and the surface world could be destroyed. Featuring cameos by the Fantastic Four, Doctor Strange, the Defenders, Peter Parker (Spider-Man), and Doctor Doom.
-</p><p>
-<img src="PrinceNamor4.jpg">
-</p><p>
-Issue #4: "The Road Not Taken!"<br>
-The mighty Sub-Mariner has succeeded in making peace between the undersea Kingdom of Atlantis and the surface world, but at what cost. Get ready for the tale that will shape the Avenging Sons tale for the next decade to come. 
+Issue #4: "The Road Not Taken!" The mighty Sub-Mariner has succeeded in making peace between the undersea Kingdom of Atlantis and the surface world, but at what cost. Get ready for the tale that will shape the Avenging Sons tale for the next decade to come. 
 </p>
+
 </body>
 </html>
