--- a/PrinceValiant/PrinceValiant.html
+++ b/PrinceValiant/PrinceValiant.html
@@ -9,20 +9,9 @@
 
 <body>
 <img src="PrinceValiant.jpg" title="Prince Valiant"> <br>
-Series: Newspaper strip 1937<br>
-Created by Hal Foster<br>	
-Publisher: King Features<br>
+Newspaper strip 1937-Current? by King Features<br>
+Created by Hal Foster<br>
 <p>
-Prince Valiant in the Days of King Arthur, or simply Prince Valiant, is an American comic strip created by Hal Foster in 1937. It is an epic adventure that has told a continuous story during its entire history, and the full stretch of that story now totals more than 4000 Sunday strips. Currently, the strip appears weekly in more than 300 American newspapers, according to its distributor, King Features Syndicate.
-</p><p>
-Edward, the Duke of Windsor, called Prince Valiant the "greatest contribution to English literature in the past hundred years". Generally regarded by comics historians as one of the most impressive visual creations ever syndicated, the strip is noted for its realistically rendered panoramas and the intelligent, sometimes humorous, narrative.
-</p><p>
-The setting is Arthurian. Valiant (Val) is a Nordic prince from Thule, located near present day Trondheim on the Norwegian coast. Early in the story Valiant arrives at Camelot where he becomes friends with Sir Gawain and Sir Tristram. Earning the respect of King Arthur and Merlin he becomes a Knight of the Round Table. 
-</p><p>
-On a Mediterranean island he meets the love of his life, Aleta, Queen of the Misty Isles, whom he later marries. He fights the Huns with his powerful Singing Sword, Flamberge, a magical blade apparently created by the same enchanter who forged Arthur's Excalibur. Val travels to Africa and America and later helps his father regain his lost throne of Thule, which has been usurped by the tyrant Sligon.
-</p><p>
-When the strip starts in 1937, Val is five years old. The first episodes follow the youth through the wild Fens district of Britain with his father, the deposed King Aguar of Thule. When Val encounters the witch Horrit she predicts he will have a life of adventure, noting that he will soon experience grief. Arriving home, Val discovers that his mother has died. Not long after this come encounters with Gawain, with gigantic creatures and with the glory of Camelot. 
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -43,6 +32,16 @@ When the strip starts in 1937, Val is five years old. The first episodes follow 
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 
+</p><p>
+Prince Valiant in the Days of King Arthur, or simply Prince Valiant, is an American comic strip created by Hal Foster in 1937. It is an epic adventure that has told a continuous story during its entire history, and the full stretch of that story now totals more than 4000 Sunday strips. Currently, the strip appears weekly in more than 300 American newspapers, according to its distributor, King Features Syndicate.
+</p><p>
+Edward, the Duke of Windsor, called Prince Valiant the "greatest contribution to English literature in the past hundred years". Generally regarded by comics historians as one of the most impressive visual creations ever syndicated, the strip is noted for its realistically rendered panoramas and the intelligent, sometimes humorous, narrative.
+</p><p>
+The setting is Arthurian. Valiant (Val) is a Nordic prince from Thule, located near present day Trondheim on the Norwegian coast. Early in the story Valiant arrives at Camelot where he becomes friends with Sir Gawain and Sir Tristram. Earning the respect of King Arthur and Merlin he becomes a Knight of the Round Table. 
+</p><p>
+On a Mediterranean island he meets the love of his life, Aleta, Queen of the Misty Isles, whom he later marries. He fights the Huns with his powerful Singing Sword, Flamberge, a magical blade apparently created by the same enchanter who forged Arthur's Excalibur. Val travels to Africa and America and later helps his father regain his lost throne of Thule, which has been usurped by the tyrant Sligon.
+</p><p>
+When the strip starts in 1937, Val is five years old. The first episodes follow the youth through the wild Fens district of Britain with his father, the deposed King Aguar of Thule. When Val encounters the witch Horrit she predicts he will have a life of adventure, noting that he will soon experience grief. Arriving home, Val discovers that his mother has died. Not long after this come encounters with Gawain, with gigantic creatures and with the glory of Camelot. 
 </p>
 </body>
 </html>
