--- a/Psychonauts/Psychonauts.html
+++ b/Psychonauts/Psychonauts.html
@@ -2,20 +2,37 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Psychonauts </title>
 </head>
 
 <body>
-<img src="Psychonauts1.jpg" title="Psychonauts #1"> <img src="Psychonauts2.jpg"><br>
-Series: 4 issue mini series 1993<br>
-Publisher: Epic (Marvel)<br>
+<img src="Psychonauts1.jpg"><br>
+4 issues 1993 Epic (Marvel)<br>
 Written by Alan Grant, Tony Luke<br>
 Illustrations by Motofumi Kobayashi<br>
 <p>
-In the year 2199, the council of the space cities of the Sol system send a team of six telepaths back to Earth to see if it is yet habitable again.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Psychonauts1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Psychonauts2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Psychonauts3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Psychonauts4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
-<img src="Psychonauts3.jpg"> <img src="Psychonauts4.jpg">
+In the year 2199, the council of the space cities of the Sol system send a team of six telepaths back to Earth to see if it is yet habitable again.
 </p>
+
 </body>
 </html>
