--- a/PsylockeArchangel/PsylockeArchangel.html
+++ b/PsylockeArchangel/PsylockeArchangel.html
@@ -2,17 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Psylocke and Archangel </title>
 </head>
 
 <body>
-<img src="PsylockeArchangel1.jpg" title="Psylocke and Archangel #1"> <img src="PsylockeArchangel2.jpg"> <br>
-Series: 4 issue mini series 1997<br>
-Publisher: Marvel<br>
-Written by Ben Raab<br>
-Illustrations by Salvador Larroca<br>
+<img src="PsylockeArchangel1.jpg" title="Psylocke and Archangel #1"><br>
+4 issues 1997, Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="PsylockeArchangel1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PsylockeArchangel2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PsylockeArchangel3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PsylockeArchangel4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 In an alley in New York's Chinatown, Kuragari murders Proctor Tar, a guardian of the barrier between Earth and the Crimson Dawn.  But before Tar dies, he contacts Gomurr the Ancient, the other guardian on this plane. 
 </p><p>
 In their Soho loft, Warren Worthington III and Betsy Braddock (Archangel and Psylocke) are at an impasse in their relationship.  He tries to get her to open up, but since being mauled by Sabertooth and then cured in the Crimson Dawn, she has lost her sense of self, and doesn't know what to tell Warren.
@@ -21,8 +36,7 @@ In the Crimson Dawn, Kuragari assigns his Undercloaks to present a mystic ring t
 Back on Earth, a visit from Logan helps Warren cope somewhat.  At the same time, Psylocke runs a holographic training program, then the Undercloaks appear.
 </p><p>
 Archangel tries to come to terms with Psylocke's personality changes, and Betsy tries to pull herself together. Kuragari begins his quest to gain Psylocke's aid in world domination.
-</p><p>
-<img src="PsylockeArchangel3.jpg"> <img src="PsylockeArchangel4.jpg">
 </p>
+
 </body>
 </html>
