--- a/Puck/Puck.html
+++ b/Puck/Puck.html
@@ -2,57 +2,60 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Puck</title>
 </head>
 
 <body>
-<h2>Puck</h2>
-<img src="Puck001.jpg"> 
-<img src="Puck001pg7.jpg"> 
-<br>
-Creator: Joseph Keppler<br>
-Series: on-going magazine<br>
-Publisher: 1871 Puck Publishing, 1916 Hearst<br>
+<img src="Puck001.jpg"><br>
+Created by Joseph Keppler, 1871-1916 Puck Publishing, 1916-1918 Hearst<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Puck001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck001pg7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck003pg8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck007pg10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck157.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck984.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck1081.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck1257.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Puck1343.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PuckYear1871.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PuckTeddyAsBabyHercules.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PuckWagnerReview.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Puck was the first successful humor magazine in the United States of colorful cartoons, caricatures and political satire of the issues of the day. It was published from 1871 until 1918. A collection of Puck cartoons dating from 1879 to 1903 is maintained by the Special Collections Research Center within the Gelman Library of The George Washington University.
 </p><p>
-<img src="PuckTeddyAsBabyHercules.jpg">
-</p><p>
 The weekly magazine was founded by Joseph Keppler in St. Louis. It began publishing English and German language editions in March 1871. Five years later, the German edition of Puck moved to New York City, where the first magazine was published on September 27, 1876. The English language edition soon followed on March 14, 1877.
-</p><p>
-<img src="PuckWagnerReview.jpg">
 </p><p>
 The English language magazine continued in operation for more than 40 years under several owners and editors, until it was bought by the William Randolph Hearst company in 1916, which had been involved with the magazine for years (one cartoon featured Hearst's comic characters of the time campaigning for his bid for Congress in 1906). The publication lasted two more years; the final edition was distributed September 5, 1918. 
 </p><p>
 A typical 32-page issue contained a full-color political cartoon on the front cover and a color non-political cartoon or comic strip on the back cover. There was always a double-page color centerfold, usually on a political topic. There were numerous black-and-white cartoons used to illustrate humorous anecdotes. A page of editorials commented on the issues of the day, and the last few pages were devoted to advertisements.
 </p><p>
-<img src="Puck007pg10.jpg">
-</p><p>
 "Puckish" means "childishly mischievous". This led Shakespeare's Puck character (from A Midsummer Night's Dream) to be recast as a charming near-naked boy and used as the title of the magazine. Puck was the first magazine to carry illustrated advertising and the first to successfully adopt full-color lithography printing for a weekly publication. The magazine consisted of 16 pages measuring 10 inches by 13.5 inches with front and back covers in color and a color double-page centerfold. The cover always quoted Puck saying, "What fools these mortals be!" The jaunty symbol of Puck is conceived as a putto in a top hat who admires himself in a hand-mirror. He appears not only on the magazine covers but over the entrance to the Puck Building in New York's Nolita neighborhood, where the magazine was published, as well.
 </p><p>
-<img src="PuckYear1871.jpg">
-</p><p>
-In May 1893, Puck Press published A Selection of Cartoons from Puck by Joseph Keppler (1877–1892) featuring 56 cartoons chosen by Keppler as his best work. Also during 1893, Keppler temporarily moved to Chicago and published a smaller-format, 12-page version of Puck from the Chicago World's Fair grounds. Shortly thereafter, Joseph Keppler died, and Henry Cuyler Bunner, editor of Puck since 1877 continued the magazine until his own death in 1896. Harry Leon Wilson replaced Bunner and remained editor until he resigned in 1902.[3] Joseph Keppler Jr. then became the editor.
+In May 1893, Puck Press published A Selection of Cartoons from Puck by Joseph Keppler (1877–1892) featuring 56 cartoons chosen by Keppler as his best work. Also during 1893, Keppler temporarily moved to Chicago and published a smaller-format, 12-page version of Puck from the Chicago World's Fair grounds. Shortly thereafter, Joseph Keppler died, and Henry Cuyler Bunner, editor of Puck since 1877 continued the magazine until his own death in 1896. Harry Leon Wilson replaced Bunner and remained editor until he resigned in 1902. Joseph Keppler Jr. then became the editor.
 </p><p>
 Years after its conclusion, the "Puck" name and slogan were revived as part of the Comic Weekly Sunday comic section that ran on Hearst's newspaper chain beginning in September 1931 and continuing until 1989, when the Los Angeles Herald-Examiner, the last paper running a comic section under that name, folded.
-</p><p>
-<img src="Puck003pg8.jpg">
 </p>
-Issues:<ul>
-<li><a href="Puck.html">Puck #1</a></li>
-<li><a href="Puck002.html">Puck #2</a></li>
-<li><a href="Puck003.html">Puck #3</a></li>
-<li><a href="Puck004.html">Puck #4</a></li>
-<li><a href="Puck005.html">Puck #5</a></li>
-<li><a href="Puck006.html">Puck #6</a></li>
-<li><a href="Puck007.html">Puck #7</a></li>
-<li><a href="Puck157.html">Puck #157</a></li>
-<li><a href="Puck984.html">Puck #984</a></li>
-<li><a href="Puck1081.html">Puck #1081</a></li>
-<li><a href="Puck1257.html">Puck #1257</a></li>
-<li><a href="Puck1343.html">Puck #1343</a></li>
-</ul>
 
 </body>
 </html>
