--- a/1602WitchHunter/1602WitchHunter.html
+++ b/1602WitchHunter/1602WitchHunter.html
@@ -2,19 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>1602 Witch Hunter Angela</title>
 </head>
 
 <body>
-<h2>1602 Witch Hunter Angela</h2>
-<img src="1602WitchHunter.jpg"><br>
-Series: 4 issue mini series in 2015 and a Graphic Novel in 2016.<br>
-Creator: Neil Gaiman<br>
-Illustrator: Stephanie Hans<br>
-Writer: Marguerite Bennett<br>
-Publisher: Marvel<br>
+<img src="1602WitchHunter01.jpg"><br>
+4 issues 2015 by Marvel<br>
+Created by Neil Gaiman, illustrated by Stephanie Hans, written by Marguerite Bennett<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="1602WitchHunter01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1602WitchHunter02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1602WitchHunter03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1602WitchHunter04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1602WitchHunter05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1602WitchHunter06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1602WitchHunter07.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 About: Angela is a fictional comic book superhero created by author Neil Gaiman and artist Todd McFarlane. She first appeared as a supporting antagonist in McFarlane's creator-owned series Spawn, making her debut in issue #9 in March 1993, and later starring in her own self-titled miniseries. She is an angel and a bounty hunter, working under the auspices of Heaven to oppose Spawn.
 </p><p>
 Angela was later the subject of a legal battle between McFarlane and Gaiman over the rights to the character, which Gaiman won. Gaiman later sold the rights to the character to Marvel Comics; she was integrated into the Marvel Universe in the 2013 story "Age of Ultron", and her character was expanded upon in the 2014 storyline "Original Sin", where she was established to be the lost sister of Thor.
