--- a/1872Marvel/1872Marvel.html
+++ b/1872Marvel/1872Marvel.html
@@ -2,28 +2,47 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>1872</title>
 </head>
 
 <body>
-<h2>1872</h2>
-<img src="1872Marvel.jpg"><br>
-Series: 4 issue mini series <br>
-Genre: Western-Frontier<br>
-Illustrator: Evan "Doc" Shaner<br>
-Writer: Gerry Duggan<br>
-Publisher: 2015 by Marvel<br>
+<img src="1872Marvel01.jpg"><br>
+4 issues, 2015 by Marvel<br>
 <p>
-About: Marvel Universe gets a major reimagining in the form of Jonathan Hickman and Esad Ribic’s Secret Wars miniseries, which is serving as a launchpad for numerous new projects offering different takes on familiar Marvel characters. For the series 1872, by writer Gerry Duggan and artist Evan “Doc” Shaner, Marvel’s flagship characters are reimagined in a Wild West setting, with Sheriff Steve Rogers maintaining the law in the town of Timely (the original name of Marvel Comics) as familiar heroes like Anthony Stark and Bruce Banner enter his orbit.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="1872Marvel01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1872Marvel02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1872Marvel03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1872Marvel04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1872Marvel05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1872Marvel06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="1872Marvel07.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
+The Marvel Universe gets a major reimagining in the form of Jonathan Hickman and Esad Ribic’s Secret Wars miniseries, which is serving as a launchpad for numerous new projects offering different takes on familiar Marvel characters. 
 </p><p>
-Story: <br>
-Issue 1: In the town of Timely, all affairs are run by Mayor Fisk for his employers at Roxxon. Only stubborn sheriff Rogers, drunk Stark, imprisoned Red Wolf, and scared reporter Urich are left to do what is right. But...a stranger comes to town that will change Timely forever...for anyone left standing, that is.
+For the series 1872, by writer Gerry Duggan and artist Evan “Doc” Shaner, Marvel’s flagship characters are reimagined in a Wild West setting, with Sheriff Steve Rogers maintaining the law in the town of Timely (the original name of Marvel Comics) as familiar heroes like Anthony Stark and Bruce Banner enter his orbit.
 </p><p>
-Issue 3: Fisk and his men are triumphant-but have they let their guard down? Just what concoction is timid Dr. Banner cooking up in his apothecary? You cannot miss the shocking last page as a hero is reborn.
+#1: In the town of Timely, all affairs are run by Mayor Fisk for his employers at Roxxon. Only stubborn sheriff Rogers, drunk Stark, imprisoned Red Wolf, and scared reporter Urich are left to do what is right. But a stranger comes to town that will change Timely forever...for anyone left standing, that is.
 </p><p>
-Issue 4: IT'S HIGH NOON IN TIMELY! Will justice stand tall, or die in the street? Timid Dr. Banner comes out of his shell. Red Wolf's fate is finally revealed...
+#2: Secret Wards series Dean Man's Hand! Bullseye, Elecktra, Grizzly, Doc Ock. 'Nuff said partner.
+</p>,p>
+#3: Fisk and his men are triumphant-but have they let their guard down? Just what concoction is timid Dr. Banner cooking up in his apothecary? You cannot miss the shocking last page as a hero is reborn.
+</p><p>
+# 4: It's high noon in timely. Will justice stand tall, or die in the street? Timid Dr. Banner comes out of his shell. Red Wolf's fate is finally revealed.
 </p>
 </body>
 </html>
