--- a/2001ASpaceOdyssey/2001ASpaceOdyssey.html
+++ b/2001ASpaceOdyssey/2001ASpaceOdyssey.html
@@ -2,23 +2,45 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>2001 A Space Odyssey</title>
 </head>
 
 <body>
-<h2>2001 A Space Odyssey</h2>
-<img src="2001ASpaceOdyssey.jpg"> <img src="2001ASpaceOdyssey01.jpg"><br>
-Series: 10 issue mini series and 1 Treasury Edition<br>
-Illustrator: Jack Kirby<br>
-Writer: Jack Kirby<br>
-Publisher: 1976 by Marvel<br>
+<img src="2001ASpaceOdyssey.jpg"><br>
+10 issues, 1 Treasury Edition, 1976 by Marvel<br>
+Illustrated and written by Jack Kirby
 <p>
-About: 2001 A Space Odyssey is the adaptation of the 1968 film of the same name as well as a ten–issue monthly series which expanded upon the concepts presented in the Stanley Kubrick film and the novel by Arthur C. Clarke. Jack Kirby wrote and pencilled both the adaptation and the series, which were published by Marvel Comics beginning in 1976. The adaptation was part of the agreement of Kirby's return to Marvel.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2001ASpaceOdyssey10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+2001 A Space Odyssey is the adaptation of the 1968 film of the same name as well as a ten–issue monthly series which expanded upon the concepts presented in the Stanley Kubrick film and the novel by Arthur C. Clarke. Jack Kirby wrote and pencilled both the adaptation and the series, which were published by Marvel Comics beginning in 1976. The adaptation was part of the agreement of Kirby's return to Marvel.
 </p><p>
 Marvel published the adaptation in its then-common treasury edition format featuring tabloid-sized pages of roughly twice the size of a normal comic book.
 </p><p>
-Story: <br>
 Kirby continued to explore the concepts of 2001 in a monthly comic book series of the same name, the first issue of which was cover dated December 1976. In this issue, Kirby followed the pattern established in the film. Once again the reader encounters a prehistoric man ("Beast-Killer") who gains new insight upon encountering a monolith as did Moon-Watcher in the film. The scene then shifts, where a descendant of Beast-Killer is part of a space mission to explore yet another monolith. When he finds it, this monolith begins to transform the astronaut into a star child, called in the comic a "New Seed".
 </p><p>
 Issues #1–6 of the series replay the same idea with different characters in different situations, both prehistoric and futuristic. In #7 (June 1977), the comic opens with the birth of a New Seed who then travels the galaxy witnessing the suffering that men cause each other. While the New Seed is unable or unwilling to prevent this devastation, he takes the essence of two doomed lovers and uses it to seed another planet with the potential for human life.
