--- a/kb.html
+++ b/kb.html
@@ -11777,6 +11777,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Startling Comics</td>
+<td>1940</td>
+<td>Pines</td>
+<td><a href="StartlingComics/StartlingComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Startling Stories: Banner</td>
 <td>2001</td>
 <td>Marvel</td>
