--- a/BlackPanther/BlackPanther.html
+++ b/BlackPanther/BlackPanther.html
@@ -8,10 +8,9 @@
 </head>
 
 <body>
-<img src="BlackPanther.jpg"><br>
-Creator: Jack Kirby<br>
-Publisher: Marvel<br>
-Series: 1977 (#1-15); 1988 (#1-4 limited series + #1-62); 2005 (#1-41); 2009 (#1-13); 2011 (The Man Without Fear, 11 issues); 2016 (#1-18 then 166-169?).
+<img src="BlackPanther01.jpg"><br>
+Created by Jack Kirby<br>
+15 issues 1977; 4 issues 1988; 41 issues 2005; 13 issues 2009; 11 issues 2011; 2016 (#1-18 then 166-169?), by Marvel
 </p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -21,7 +20,21 @@ Series: 1977 (#1-15); 1988 (#1-4 limited series + #1-62); 2005 (#1-41); 2009 (#1
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="BlackPanther.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackPanther15.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BlackPantherLimited1988.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BlackPanther1988.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BlackPanther2005.jpg"></div>
