--- a/kb.html
+++ b/kb.html
@@ -10195,6 +10195,12 @@ Creative Knowledgebase<br>
 <td><a href="PsiForce/PsiForce.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Psycho</td>
+<td>1971</td>
+<td>Skywald</td>
+<td><a href="Psycho/Psycho.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Psychonauts</td>
