--- a/MarvelPremiere/MarvelPremiere.html
+++ b/MarvelPremiere/MarvelPremiere.html
@@ -2,20 +2,93 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Marvel Premiere</title>
 </head>
 
 <body>
-<h2>Marvel Premiere</h2>
 <img src="Marvel_Premiere_001_1972.jpg"><br>
-Released: May 1972 - August 1981, 61 issues<br>
-Publisher: <a href="../../Publisher/marvel.html">Marvel Comics</a><br>
+61 issues 1972-1981 by <a href="../../Publisher/marvel.html">Marvel</a><br>
 Illustrators: <a href="../../Creator/GilKane.html">Gil Kane</a>, Jerry Bingham, Frank Brunner, John Byrne, George Perez, Barry Windsor-Smith, Tom Sutton
 <br>
 Writers: Roy Thomas, Steve Englehart, Ed Hannigan, David Anthony Kraft, Stan Lee, David Michelinie, Jim Salicrup, Roger Stern
 <p>
-Story:<br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_001_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_002_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_003_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_004_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_005_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_006_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_007_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_008_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_009_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_010_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_011_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_012_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_013_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_014_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_015_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_016_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_017_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_018_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_019_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_020_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_021_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_022_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_023_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_024_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_025_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_026_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_027_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_028_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_029_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_030_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_031_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_032_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_033_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_034_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_035_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_036_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_037_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_038_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_039_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_040_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_041_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_042_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_043_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_044_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_045_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_046_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_047_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_048_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_049_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_050_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_051_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_052_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_053_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_054_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_055_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_056_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_057_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_058_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_059_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_060_1972.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel_Premiere_061_1972.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Marvel Premiere was a tryout book, intended to determine if a character could attract enough readers to justify launching their own series. It ran for 61 issues from April 1972 to August 1981. Contrary to the concept, the majority of the characters featured had previously appeared in other comics.
 </p><p>
 Later in the title's run, Marvel Premiere was used to finish stories of characters who had lost their own series including the Man-Wolf in issues #45–46 and the Black Panther in issues #51–53.
