--- a/NFAOS/NFAOS.html
+++ b/NFAOS/NFAOS.html
@@ -9,10 +9,8 @@
 <body>
 
 <img src="NFAOS001.jpg"> <br>
-Series: 1968 - 1971<br>
-Publisher: Marvel<br>
-Written by Jim Steranko<br>
-Illustrations by Jim Steranko<br>
+18 issues 1968-1971 by Marvel<br>
+Written and illustrated by <a href="../JimSteranko/JimSteranko.html">Jim Steranko</a>
 <p>
 Colonel Nicholas Joseph Fury is a fictional character appearing in American comic books published by Marvel Comics. Created by writer/artist Jack Kirby and writer Stan Lee, Fury first appeared in Sgt. Fury and his Howling Commandos #1 (May 1963), a World War II combat series that portrayed the cigar-chomping Fury as leader of an elite U.S. Army unit. A popular character over a number of decades, in 2011, Fury was ranked 33rd in IGN's Top 100 Comic Book Heroes, and 32nd in their list of "The Top 50 Avengers". He has sometimes been considered an antihero.
 </p><p>
