--- a/kb.html
+++ b/kb.html
@@ -7021,6 +7021,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Jim Steranko</td>
+<td>1938</td>
+<td>Creator</td>
+<td><a href="JimSteranko/JimSteranko.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jingle Belle</td>
 <td>2004</td>
 <td>Dark Horse</td>
