Chamber of Chills

--- a/kb.html
+++ b/kb.html
@@ -12133,6 +12133,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Tales of the Unexpected</td>
+<td>1956</td>
+<td>DC</td>
+<td><a href="Unexpected/Unexpected.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tales of the Zombie</td>
 <td>1973</td>
 <td>Marvel</td>
@@ -12683,6 +12690,13 @@ Creative Knowledgebase<br>
 <td>2003</td>
 <td>Vertigo</td>
 <td><a href="UndercoverGenie/UndercoverGenie.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Unexpected</td>
+<td>1968</td>
+<td>DC</td>
+<td><a href="Unexpected/Unexpected.html">Details</a></td>
 </tr>
 
 <tr>
