--- a/ChamberOfChills/ChamberOfChills.html
+++ b/ChamberOfChills/ChamberOfChills.html
@@ -2,19 +2,45 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Chamber Of Chills</title>
 </head>
 
 <body>
-<h2>Chamber Of Chills</h2>
-<img src="ChamberOfChills1951.jpg">
-<img src="ChamberOfChills1972.jpg"> <br>
-Series: on-going<br>
-Publisher: 1951 Harvey, 1972 Marvel <br>
+<img src="ChamberOfChills01.jpg"><br>
+26 issues 1951-1954 by Harvey, 25 issues 1972-1975 by Marvel <br>
 <p>
-A series of unrelated pre-code horror stories.<br>
-Numbering continues from Blondie Comics Monthly #1-20, starting with issue #21, starts renumbering after issue #24 to #5, continues with a title change to Chamber of Clues #27, which is a detective series. Marvel picks the title up in 1972 for 25 issues until 1976.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills1972_01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills1972_02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills1972_03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills1972_04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChamberOfChills1972_05.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Numbering continues from Blondie Comics Monthly #1-20, the horror anthology and title "Chamber of Chills" starts with issue #21, then reverts the issue numbers after issue #24 to #5, continues with a title change to Chamber of Clues #27, which is an unrelated detective series. Marvel picks the title up in 1972 for 25 issues until 1976. 
+</p><p>
+Changing titles and numbering is confusing, but used to happen all the time. The publishers used to have to file for a new mail order permit when they changed the numbering, so instead of stopping one and starting another, they often just changed titles and kept the numbering the same.
 </p>
 
 </body>
